test/error/E36.chifn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {
		"74d39334-d241-4dd5-932a-91716d5b2a83": {
			"type": "leeeng:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
	],
	"local_variables": {}
}
